--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,7 @@
     <title>ShopOn</title>
   </head>
   <body>
+    <script src="https://kit.fontawesome.com/c40141444b.js" crossorigin="anonymous"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
