--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,6 +30,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ShopOn</title>
+    <meta property="og:image" content="http://www.jbiakcin.com/images/shop_on.png" />
   </head>
   <body>
     <script src="https://kit.fontawesome.com/c40141444b.js" crossorigin="anonymous"></script>
